hphp/test/zend/good/ext/libxml/tests/bug63389.php.skipif
<?hh
<<__EntryPoint>> function main() {
if (!extension_loaded('libxml')) die('skip');
}
