hphp/test/zend/bad/ext/standard/tests/mail/mail_variation_alt1-win32.php.skipif
<?php 
if( substr(PHP_OS, 0, 3) != 'WIN' ) {
   die('skip...Windows only test');
}

require_once(dirname(__FILE__).'/mail_skipif.inc');
?>